# LMEvalHarness

./: .gitignore  LICENSE  README.md  pyproject.toml
lmeval_add/: evaluator.py
lmeval_add/api/: task.py
lmeval_add/jasquad/: evaluate.py  jasquad.py
lmeval_add/tasks/japanese/: __init__.py  jaqket_v1.py  jaqket_v2.py  jaquad.py  jcsqa.py  jnli.py  jsquad.py  marc_ja.py  mgsm.py  wikilingua.py  xlsum.py  xwinograd.py
lmeval_add/tasks/japanese/jblimp/: _template_yaml  jblimp.yaml
lmeval_add/tasks/japanese/jcola/: _template_yaml  base.yaml  prompt_0_3.yaml  prompt_0_4.yaml  prompt_0_5.yaml  prompt_0_6.yaml  utils.py
lmeval_add/tasks/japanese/xwinograd/: xwinograd_ja.yaml
lmeval_add/utils/: japanese.py  metrics.py  mlflow.py
recipe/: exec_harness_open_calmb1b.sh  exec_harness_open_calmb3b.sh  exec_harness_rinna_1b.sh  exec_harness_rinna_gpt_small.sh  path.sh  run.sh
tools/: Makefile
tools/installers/: install_llms_harness.sh  install_torch.sh  install_torch_optimizer.sh
